--- a/inerr.html
+++ b/inerr.html
@@ -10,5 +10,8 @@
 <body>
     <div class="trapezoid"></div>
     <div class="heart"></div>
+    <div class="diamond"></div>
+    <div class="egg"></div>
+    <div class="star"></div>
 </body>
 </html>
